-
Bug
-
Resolution: Done
-
P2: Important
-
5.15, 6.0.0 Beta2
-
None
-
bf547fb272f568e438ed9c2fe48427b5a054f93a (qt/qtdeclarative/dev)
ListModel currently does not handle urls. As Qt.resolvedUrl returns an actual url instead of a QString, this breaks previously working code.
Notably, this breaks the imageparticle example.
| For Gerrit Dashboard: QTBUG-88379 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 321232,3 | ListModel: support URLs | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |